<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="window_payment_confirmation_title">Payment confirmation</string>
    <string name="dialog_exit_confirmation_payments_message">Are you sure you want to cancel this payment?</string>
    <string name="window_card_payment_label">Card payment</string>
    <string name="window_card_payment_cardholder_name_label">Cardholder name</string>
    <string name="window_card_payment_cardholder_name_hint">John Appleseed</string>
    <string name="window_card_payment_card_number_label">Card number</string>
    <string name="window_card_payment_card_number_hint" translatable="false">1234 5678 9012 3456</string>
    <string name="window_card_payment_expiry_date_label">Expiry date</string>
    <string name="window_card_payment_expiry_date_hint" translatable="false">MM/YY</string>
    <string name="window_card_payment_cvv_label" translatable="false">CVV / CVC </string>
    <string name="window_card_payment_cvv_hint" translatable="false">123</string>
    <string name="window_card_payment_notice">kevin. is not storing any of your personal info or card details.</string>
    <string name="window_card_payment_cvv_tooltip">CVV is a 3 digit code displayed on the back of your card</string>
    <string name="error_no_cardholder_name">Cardholder name must be entered</string>
    <string name="error_invalid_cvv">Enter valid CVV</string>
    <string name="error_no_cvv">CVV must be entered</string>
    <string name="error_invalid_expiry_date">Expiry date is invalid</string>
    <string name="error_no_expiry_date">Expiry date must be entered</string>
    <string name="error_card_expired">Card is expired</string>
    <string name="error_invalid_card_number">Card number is invalid</string>
    <string name="error_no_card_number">Card number must be entered</string>
    <string name="window_card_payment_redirect_title">Continue payment via bank transfer?</string>
    <string name="window_card_payment_redirect_subtitle">Would you like to continue payment via Bank Transfer?</string>
    <string name="window_card_payment_bank_redirect_subtitle">We have noticed that your payment card is issued by %s. Would you like to continue payment via Bank Transfer?</string>
</resources>