<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?kevinPrimaryBackgroundColor"
    tools:parentTag="androidx.constraintlayout.widget.ConstraintLayout">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        style="?kevinToolbarStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/window_card_payment_title" />

    <ImageView
        android:id="@+id/card_icon_view"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_payment_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

    <TextView
        android:id="@+id/amount_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_icon_view"
        tools:text="€ 14.99" />

    <TextView
        android:id="@+id/card_payment_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="9dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/amount_view"
        tools:text="Card payment" />

    <TextView
        android:id="@+id/cardholder_name_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/window_card_payment_cardholder_name_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_payment_label" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cardholder_name_input"
        style="@style/Kevin.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardholder_name_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/window_card_payment_cardholder_name_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/card_number_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/window_card_payment_card_number_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardholder_name_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/card_number_input"
        style="@style/Kevin.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_number_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/window_card_payment_card_number_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/expiry_date_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/window_card_payment_expiry_date_label"
        app:layout_constraintEnd_toStartOf="@id/cvv_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_number_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/expiry_date_input"
        style="@style/Kevin.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@id/cvv_input"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiry_date_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/window_card_payment_expiry_date_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/cvv_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="26dp"
        android:text="@string/window_card_payment_cvv_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expiry_date_label"
        app:layout_constraintTop_toBottomOf="@id/card_number_input" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/cvv_input"
        style="@style/Kevin.TextInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/expiry_date_input"
        app:layout_constraintTop_toBottomOf="@id/cvv_label">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/window_card_payment_cvv_hint" />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/notice_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:contentDescription="@null"
        android:src="@drawable/ic_report_warning"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/expiry_date_input" />

    <TextView
        android:id="@+id/notice_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginEnd="16dp"
        android:text="@string/window_card_payment_notice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/notice_icon"
        app:layout_constraintTop_toTopOf="@id/notice_icon" />

    <Button
        android:id="@+id/continue_button"
        style="?kevinPrimaryButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="16dp"
        android:text="@string/Continue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/notice_view"
        app:layout_constraintVertical_bias="1" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_bar" />

</merge>